# rpa

./: .gitignore  LICENSE  README.md
apps/dummy-gui/: .gitignore  README.md  go.mod  main.go  wails.json
apps/dummy-gui/frontend/: README.md  biome.jsonc  package-lock.json  package.json  package.json.md5  tsconfig.json
apps/dummy-gui/frontend/components/: CanvasPlayground.tsx  TabNav.tsx
apps/dummy-gui/frontend/components/sections/: FeedbackSection.tsx  FormsSection.tsx  MediaSection.tsx  MiscSection.tsx  NavigationSection.tsx  TablesSection.tsx
apps/dummy-gui/frontend/pages/: index.module.css  index.tsx
apps/dummy-gui/frontend/public/: data.csv
apps/dummy-gui/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/dummy-gui/frontend/src/app/account/complete/: page.tsx
apps/dummy-gui/frontend/src/components/: Header.tsx  SidePanel.tsx  ThemeToggle.tsx
apps/go/: go.mod  go.sum  main.go
apps/go/cmd/robot/: main.go
apps/node/: README.md  biome.json  package-lock.json  package.json  tsconfig.json
apps/py-robot-fw/: README.md  dummy_browser.robot  main.py  pyproject.toml
apps/py-rpa/: handle_dummy_browser.py  handle_dummy_browser2.py  handle_dummy_browser_2.py  handle_dummy_browser_selenium.py  handle_dummy_gui.py  handle_hp.py  handle_raven_hp.py  main.py  pyproject.toml  ruff.toml
apps/py-rpa/rpa/: browser_robot.py  browser_robot_playwright.py  browser_robot_selenium.py  robot.py
apps/py-rpa/tools/: tester.py
apps/python/: main.py  pyproject.toml  ruff.toml
apps/python/core/: robot.py
apps/python/rpa/: __init__.py  robot.py
(+3 files in other folders)
